# homelab

./: .dockerstart.sh.swp  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  code-server-install.sh  docker-runs  dockerstart.sh  homeassistant-install.sh  lunarvim.sh  postinstall.sh  pyproject.toml  zsh-with-p10k.sh
ansible/: README.md
ansible/backup/: ssd-sync-install.yaml
ansible/docker/: docker-api-enable.yaml  docker-clean.yaml  docker-deploy-compse-stack.yaml  docker-deploy-stack.yaml  docker-generate-certs.yaml  docker-install.yaml  docker-stop-compse-stack.yaml  docker-stop-stack.yaml
ansible/mqtt/: create-homeassistant-topics.yaml  test-connection.yaml
ansible/postgres/: create-user-databases.yaml  postgres-test-connection.yaml  test-connection.yaml
ansible/scripts/: check-size-install.yaml  (+1 more)
databases/: docker-compose.yaml
docker_composes/: duplicati-compose.yaml  pihole-compose.yaml  postgres-compose.yaml  resilio-compose.yaml
duplicati/: docker-compose.yaml
monitoring/: docker-compose.yaml
n8n/: docker-compose.yaml
nginx-proxy-manager/: docker-compose.yaml
pihole/: docker-compose.yaml
resilio-sync/: docker-compose.yaml
rundeck/: docker-compose.yaml
scripts/: backup-docker.sh  check-size.sh  check_size.sh  init-cloudflared.sh  mqtt-check-size.py  mqtt-send.sh  mqtt-updates.sh  mqtt_send.sh  post-install.sh  sync-drive.sh  sync-projects.sh
shares/: .env copy  docker-compose.yaml  env-example
terraform/: README.md
utils/: backup_docker.sh  docker_kill.sh  dockerstart.sh  postinstall.sh
(+186 files in other folders)
