[tool.poetry]
name = "Webhook-homelab"
version = "0.1.0"
description = "Webhook Homelab"
authors = ["Asafe Felipe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
yamllint = "^1.35.1"
bandit = "^1.7.8"
pre-commit = "^3.7.1"
commitizen = "^3.27.0"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
